successfully updated ui and linked with backend

--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -7,14 +7,23 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>onlineshopping Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<properties>
 		<javaee.version>7.0</javaee.version>
 		<spring.version>4.3.6.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
 	</properties>
-	
+
 	<dependencies>
+
+
+		<!-- Linking backend project -->
+		<dependency>
+			<groupId>net.kzn</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
